# formatted-join

./: README.md  formatted_join.py  formatted_join_test.py  pyproject.toml  ruff.toml  tox.ini
